prepare for Rex API docs
Took 3 hours 17 minutes